[AAA -FED]: [AAA-101] UI spacing issue fixed

--- a/html-prototype/clientlibs/ace-www/base/less/50-50-image.less
+++ b/html-prototype/clientlibs/ace-www/base/less/50-50-image.less
@@ -6,14 +6,9 @@
     background-size: cover;
     .flex-component {
         align-self: flex-end;
+        width: 100%;
         .content {
             .text-block {
-                padding: 100px 80px;
-                padding-right: 0;
-                .btn-style,
-                .link-btn {
-                    margin: 0;
-                }
                 .title {
                     display: inline-block;
                     overflow: hidden;
