--- a/html-prototype/clientlibs/ace-www/base/less/responsive.less
+++ b/html-prototype/clientlibs/ace-www/base/less/responsive.less
@@ -4,11 +4,15 @@ Created Date:28-July-2016
 Modified Date:18-Aug-2016
 Version:0.3
 *****************************************/
- /*==========  Mobile First Method  ==========*/
 
-/* Custom, iPhone Retina */ 
-@media only screen and (min-width : 320px) {
-	/* Gutter Spaceing 16px */
+
+/*==========  Mobile First Method  ==========*/
+
+
+/* Custom, iPhone Retina */
+
+@media only screen and (min-width: 320px) {
+    /* Gutter Spaceing 16px */
     div[class^="col"] {
         padding-left: 8px;
         padding-right: 8px;
@@ -52,10 +56,12 @@ Version:0.3
     }
     /*Footer CTA Component*/
     .footer-column {
-		&.top-space{padding-top:@space-md - 30;}   
-		.horizontal-space2 {
+        &.top-space {
+            padding-top: @space-md - 30;
+        }
+        .horizontal-space2 {
             margin-bottom: @space-sm;
-        } 		
+        }
     }
     /*Full image Component*/
     .component-space {
@@ -70,14 +76,13 @@ Version:0.3
         .horizontal-space2 {
             margin-bottom: @space-sm;
         }
-		.image-block {
-			padding: 0 30px;
-		}
+        .image-block {
+            padding: 0 30px;
+        }
     }
-    
     .img-50-50 .row-reverse .content .text-block,
     .img-50-50 .flex-component .content .text-block {
-        padding: 70px 20px;
+        padding: 70px 20px 30px 20px;
     }
     .img-50-50 {
         .flex-component {
@@ -90,7 +95,7 @@ Version:0.3
                 }
             }
         }
-    }    
+    }
     .membership-calculator {
         padding-top: 100px;
         .membership-details {
@@ -161,14 +166,21 @@ Version:0.3
     }
 }
 
-/* Extra Small Devices, Phones */ 
-@media only screen and (min-width : 480px) {
-	
+
+/* Extra Small Devices, Phones */
+
+@media only screen and (min-width: 480px) {
+    .img-50-50 .flex-component .content .text-block {
+        padding: 100px 20px 30px 20px;
+        padding-right: 0;
+    }
 }
 
+
 /* Small Devices, Tablets */
-@media only screen and (min-width : 768px) {
-	/* Gutter Spaceing 30px */
+
+@media only screen and (min-width: 768px) {
+    /* Gutter Spaceing 30px */
     div[class^="col"] {
         padding-left: 15px;
         padding-right: 15px;
@@ -209,9 +221,11 @@ Version:0.3
         font-size: @h-font-large-t;
         line-height: 18px;
     }
-	/*Footer CTA Component*/
+    /*Footer CTA Component*/
     .footer-column {
-		&.top-space{padding-top:@space-md;}        
+        &.top-space {
+            padding-top: @space-md;
+        }
     }
     /*Full image Component*/
     .component-space {
@@ -223,11 +237,11 @@ Version:0.3
         .horizontal-space2 {
             margin-bottom: @space-md - 30;
         }
-		.image-block {
-			padding: 0 70px;
-		}
+        .image-block {
+            padding: 0 70px;
+        }
     }
-	.page-intro {
+    .page-intro {
         padding-top: @space-md;
     }
     .horizontal-component-space {
@@ -236,12 +250,12 @@ Version:0.3
     .horizontal-space2 {
         margin-bottom: @space-sm;
     }
-    .img-50-50 .row-reverse .content .text-block,
     .img-50-50 .flex-component .content .text-block {
-        padding: 70px 40px;
+        padding: 100px 80px;
+        padding-right: 0;
     }
     .img-50-50 {
-        .flex-component {			      
+        .flex-component {
             .content {
                 .text-block {
                     .round-circle {
@@ -304,63 +318,67 @@ Version:0.3
     }
 }
 
+
 /* Medium Devices, Desktops */
-@media only screen and (min-width : 992px) {
-	/* Gutter Spaceing 40px */
-	div[class^="col"] {
-		padding-left: 20px;
-		padding-right: 20px;
-	}
-	.font-a {
-		font-size: @a-font-size-d;
-		line-height: 58px;
-	}
-	.font-b {
-		font-size: @b-font-size-d;
-		line-height: 40px;
-	}
-	.font-c {
-		font-size: @c-font-size-d;
-		line-height: 16px;
-	}
-	.font-d {
-		font-size: @d-font-size-d;
-		line-height: 14px;
-	}
-	.font-e {
-		font-size: @e-font-size-d;
-		line-height: 18px;
-	}
-	.font-f {
-		font-size: @f-font-size-d;
-		line-height: 24px;
-	}
-	.font-g {
-		font-size: @g-font-small-d;
-		line-height: 28px;
-	}
-	.font-h {
-		font-size: @h-font-large-d;
-		line-height: 18px;
-	}
-	.flex-component {
+
+@media only screen and (min-width: 992px) {
+    /* Gutter Spaceing 40px */
+    div[class^="col"] {
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+    .font-a {
+        font-size: @a-font-size-d;
+        line-height: 58px;
+    }
+    .font-b {
+        font-size: @b-font-size-d;
+        line-height: 40px;
+    }
+    .font-c {
+        font-size: @c-font-size-d;
+        line-height: 16px;
+    }
+    .font-d {
+        font-size: @d-font-size-d;
+        line-height: 14px;
+    }
+    .font-e {
+        font-size: @e-font-size-d;
+        line-height: 18px;
+    }
+    .font-f {
+        font-size: @f-font-size-d;
+        line-height: 24px;
+    }
+    .font-g {
+        font-size: @g-font-small-d;
+        line-height: 28px;
+    }
+    .font-h {
+        font-size: @h-font-large-d;
+        line-height: 18px;
+    }
+    .flex-component {
         display: flex;
         align-items: center;
     }
-	/*Footer CTA Component*/
+    /*Footer CTA Component*/
     .footer-column {
-		&.top-space{padding-top:@space-lg;}    		
+        &.top-space {
+            padding-top: @space-lg;
+        }
         .horizontal-space2 {
             margin-bottom: @space-sm;
-        }   		
-    }    
-	.horizontal-component-space {
-		padding: 130px 0;
-	}
+        }
+    }
+    .horizontal-component-space {
+        padding: 130px 0;
+    }
     .component-height {
         max-height: 900px;
     }
-	.single-column {
+    .single-column {
         padding-top: @space-lg;
         padding-bottom: @space-lg;
         .horizontal-space2 {
@@ -375,22 +393,22 @@ Version:0.3
     }
 }
 
+
 /* Large Devices, Wide Screens */
-@media only screen and (min-width : 1200px) {
-	/*Footer CTA Component*/
-    .footer-column {		    		
+
+@media only screen and (min-width: 1200px) {
+    /*Footer CTA Component*/
+    .footer-column {
         .horizontal-space2 {
             margin-bottom: @space-md - 30;
-        }   		
-    } 
-}
-	
-	
-@media (min-width:1500px) {
-	/*Screen resolution 1700px and above, container width restricted*/
-	.container-custom {
-		max-width: 1700px;
-		margin: 0 auto;
-	}
+        }
+    }
 }
 
+@media (min-width:1500px) {
+    /*Screen resolution 1700px and above, container width restricted*/
+    .container-custom {
+        max-width: 1700px;
+        margin: 0 auto;
+    }
+}
